[package]
name = "rust-be"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version ="0.7.4", features = ["macros"] }
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.113"
tokio = { version = "1.35.1", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.5.1", features = ["cors", "fs"] }
tower-cookies = "0.10.0"
lazy-regex = "3.1.0"
async-trait = "0.1.77"
strum_macros = "0.26.1"
uuid = { version =  "1.7.0", features = ["v4", "fast-rng"]}
